Release v1.1.0: add system health and storage admin
